--- a/provision/requirements.yml
+++ b/provision/requirements.yml
@@ -10,3 +10,6 @@
 - src: https://github.com/znz/ansible-role-user-anyenv
   version: master
   name: znz.user-anyenv
+- src: https://github.com/znz/ansible-role-user-tools
+  version: master
+  name: znz.user-tools
