--- a/provision/requirements.yml
+++ b/provision/requirements.yml
@@ -19,3 +19,6 @@
 - src: https://github.com/znz/ansible-role-user-ruby-git
   version: master
   name: znz.user-ruby-git
+- src: https://github.com/znz/ansible-role-user-old-openssl
+  version: master
+  name: znz.user-old-openssl
